# libctelebot

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
example/: CMakeLists.txt  main.c
include/: ct_api.h  ct_buffer.h  ct_common.h  ct_message.h  ct_net_api.h  ct_param_list.h  ct_queue.h
src/: ct_api.c  ct_buffer.c  ct_common.c  ct_message.c  ct_net_api.c  ct_param_list.c  ct_queue.c
